tests/bad/uninitialized_variable_assignment.rat
/// fail: tests\bad\uninitialized_variable_assignment.rat:3:1 Variable x doesn't exist

x = 2
